--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
       <p class="error"></p>
     </div>
-
+    <!-- <canvas id="myChart"></canvas> -->
     <div class="transactions">
       <table>
         <thead>
@@ -38,7 +38,6 @@
       </table>
     </div>
     
-    <canvas id="myChart"></canvas>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
