--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,11 @@
   <link rel="shortcut icon" href="/images/icons/icon-128x128.png" type="image/x-icon">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="manifest" href="dist/manifest.json" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   <title>Budget Tracker</title>
 </head>
 <body>
@@ -25,7 +28,7 @@
       <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
       <p class="error"></p>
     </div>
-    <!-- <canvas id="myChart"></canvas> -->
+    <canvas id="myChart"></canvas>
     <div class="transactions">
       <table>
         <thead>
