Changed padding of inside graph

--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,13 @@
 </head>
 <body>
   <div class="wrapper">
-    <p class="font welcome">Welcome</p>
-    <div class="total">
-      <div class="total font">Total $<span id="total">0</span></div>
-    </div>
+    <section class="font welcome">
+      <p>Welcome</p>
+      <section class="total-amount">
+        <p class="total-font">Total Amount</p>
+        <p class="dollar">$<span id="total">0</span></p>
+      </section>
+    </section>
 
     <div class="form">
       <input type="text" id="t-name" placeholder="Name of transaction" />
