Added gradient to bottom of graph

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
       <p class="error"></p>
     </div>
     <canvas id="myChart" class="myChart"></canvas>
+    <section class="new-trans">
+    
+    </section>
     <div class="transactions">
       <table>
         <thead>
