Added this year yellow icon

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     </div>
     <canvas id="myChart" class="myChart"></canvas>
     <section class="new-trans">
-    
+      <p class="time-year font">This Year</p>
     </section>
     <div class="transactions">
       <table>
