Added table container

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,9 @@
     <section class="new-trans">
       <p class="time-year font">This Year</p>
     </section>
+    <section class="tableme">
+
+    </section>
     <div class="transactions">
       <table>
         <thead>
