Did transaction button for desktop

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,11 @@
       <p class="error"></p>
     </div>
     <canvas id="myChart" class="myChart"></canvas>
+    <section class="view-trans">
+      <p class="open view font">Transactions</p>
+    </section>
     <section class="new-trans">
+      <p class="open font">Transactions</p>
       <p class="time-year font">This Year</p>
     </section>
     <section class="tableme font">
