Desktop users are now able to view their transactions

--- a/public/index.html
+++ b/public/index.html
@@ -37,12 +37,35 @@
     <canvas id="myChart" class="myChart"></canvas>
     <section class="view-trans">
       <p class="open add view font">Add</p>
-      <p class="open view font">Transactions</p>
+      <p class="open tranny view font">Transactions</p>
     </section>
     <section class="new-trans">
       <p class="open font">Add</p>
-      <p class="open font">Transactions</p>
+      <p class="open tranny font">Transactions</p>
       <p class="time-year font">Add</p>
+    </section>
+    <section class="desk-table font">
+      <section>
+        <p class="title2">Transactions</p>
+      </section>
+    <section class="data">
+      <div class="left">
+        <p>Food</p>
+        <p>Movie</p>
+        <p>Clothes</p>
+      </div>
+      <div class="right">
+        <p>$10</p>
+        <p>$23</p>
+        <p>$54</p>
+      </div>
+        <table class="real-table font">
+          <tbody id="tbody">
+            
+          </tbody>
+        </table>
+      </section>
+      
     </section>
     <section class="tableme font">
       <section>
