Added background container to add button

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
       </section>
     </section>
     
+    <section class="add-container">
+   
+    </section>
 
     <div class="form">
       <input type="text" id="t-name" placeholder="Name of transaction" />
@@ -34,15 +37,16 @@
       <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
       <p class="error"></p>
     </div>
+
     <canvas id="myChart" class="myChart"></canvas>
     <section class="view-trans">
       <p class="open add view font">Add</p>
       <p class="open tranny view font">Transactions</p>
     </section>
     <section class="new-trans">
-      <p class="open font">Add</p>
+      <p class="open add font">Add</p>
       <p class="open tranny font">Transactions</p>
-      <p class="time-year font">Add</p>
+      <p class="time-year add font">Add</p>
     </section>
     <section class="desk-table font">
       <section>
