Added close button to add window

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
     </section>
     
     <section class="add-container">
+      
       <div class="form">
+        <img class="close" src="/images/close.png"/>
         <input type="text" id="t-name" placeholder="Name of transaction" />
         <input type="number" min="0" id="t-amount" placeholder="Transaction amount" />
         <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
