--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,10 @@
       
       <div class="form">
         <img class="close" src="/images/close.png"/>
-        <input type="text" id="t-name" placeholder="Name of transaction" />
-        <input type="number" min="0" id="t-amount" placeholder="Transaction amount" />
-        <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
-        <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
+        <input type="text" id="t-name" placeholder="Name of transaction" class="input-yay font" />
+        <input type="number" min="0" id="t-amount" placeholder="Amount" class="input-yay font" />
+        <button id="add-btn" class="button-new font"> Add Funds</button>
+        <button id="sub-btn" class="button-new font">Subtract Funds</button>
         <p class="error"></p>
       </div>
     </section>
